--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,9 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
-        
+        compile project(':pocketsphinxLibraries')
+        compile project(':pocketsphinxSources')
+        implementation 'com.android.support:appcompat-v7:26.1.0'
     }
 }
 
