--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,3 @@
-include 'desktop', 'android', 'ios', 'core'
+include 'desktop', 'android', 'ios', 'core', ':pocketsphinxLibraries', ':pocketsphinxSources'
+project(':pocketsphinxLibraries').projectDir = new File('aars')
+project(':pocketsphinxSources').projectDir = new File('models')
